# auth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/: pre-commit.yaml
.github/workflows/: ci.yaml
.gitlab/: .gitlab-ci.yml  auth.yml
.gitlab/extends/: build.yml  check-build.yml  deploy.yml  lint.yml  semantic-release.yml
scripts/: db-initializer.sh
src/auth/: __main__.py
src/auth/application/common/: application_error.py  handlers.py  markers.py
src/auth/application/common/behaviors/: __init__.py  commition_behavior.py  event_publishing_behavior.py  log_error_behavior.py
src/auth/application/common/const/: errors.py
src/auth/application/common/dto/: user_info_dto.py
src/auth/application/operations/commands/: __init__.py  login.py  logout.py  register.py
src/auth/application/ports/: __init__.py  domain_event_raiser.py  id_generator.py  identity_provider.py  logger.py  password_hasher.py  password_verify.py  publisher.py  time_provider.py  token_provider.py  transaction_manager.py
src/auth/bootstrap/: cli.py  cli_web.py  cli_worker.py  config.py  web.py  worker.py
src/auth/bootstrap/di/: containers.py
src/auth/bootstrap/di/containers/: cli_web.py  cli_worker.py  web.py  worker.py
src/auth/bootstrap/di/providers/: __init__.py  application.py  configs.py  domain.py  handlers.py  mediator.py  persistence.py
src/auth/bootstrap/web/: __main__.py  application.py  cli.py
src/auth/bootstrap/worker/: __main__.py  application.py  cli.py
src/auth/domain/session/: factory.py  repository.py  session.py
src/auth/domain/shared/: domain_error.py  domain_event.py  entity.py  markers.py  value_object.py
src/auth/domain/shared/const/: errors.py
src/auth/domain/user/: events.py  factory.py  repository.py  role_enum.py  specifications.py  user.py  user_type.py
src/auth/domain/user/const/: errors.py  login.py  password.py
src/auth/domain/user/value_objects/: __init__.py  login.py  password.py  role.py  username.py
src/auth/infrastructure/: errors.py  logging.py
src/auth/infrastructure/adapters/: __init__.py  domain_events.py  id_generator.py  password_bcrypt.py  time_provider.py
src/auth/infrastructure/adapters/factories/: __init__.py  session_factory.py  user_factory.py
src/auth/infrastructure/mediator/: chain.py  mediator.py  registry.py
src/auth/infrastructure/mediator/interfaces/: __init__.py  chain.py  resolver.py
src/auth/infrastructure/mediator/resolvers/: __init__.py  dishka.py
src/auth/infrastructure/messaging/: config.py
src/auth/infrastructure/messaging/outbox/: outbox_handler.py  outbox_loop.py  outbox_message.py  outbox_processor.py  outbox_publisher.py  process_outbox.py
src/auth/infrastructure/outbox/: config.py  outbox_handler.py  outbox_message.py  outbox_processor.py  outbox_publisher.py  outbox_serialization.py  process_outbox.py  transaction.py
src/auth/infrastructure/outbox/interfaces/: __init__.py  outbox_gateway.py
src/auth/infrastructure/persistence/adapters/: __init__.py  sql_outbox_gateway.py  sql_session_repository.py  sql_user_repository.py
src/auth/infrastructure/persistence/alembic/: alembic.ini  (+1 more)
src/auth/presentation/: sender.py
src/auth/presentation/cli/: migrations.py  server_starting.py  wrapper.py
src/auth/presentation/web/: identity_provider.py
(+46 files in other folders)
